@@ -14,11 +14,13 @@
     }
 
     .img-profile__profile {
-        position: absolute;
-        top: 28px;
-        left: 49px;
-        width: 140px;
-        height: 140px;
+        border: 10px solid #990000;
+        box-shadow: 0 0 5px #000;
+        display: block;
+        position: relative;
+        margin: 1.25rem 3rem;
+        width: 200px;
+        height: 200px;
         border-radius: 50%;
         z-index: 1;
     }
@@ -32,10 +34,10 @@
 
 .img-profile-camera {
     border-radius: 50%;
-    top: 28px;
-    left: 49px;
-    width: 140px;
-    height: 140px;
+    top: 29px;
+    left: 57px;
+    width: 182px;
+    height: 182px;
     position: absolute;
     transition: .3s ease;
     z-index: 2;
@@ -48,16 +50,16 @@
         width: 100%;
         height: 100%;
         .dropdown-menu{
-            top: 65px;
-            left: 35px;
+            top: 86px;
+            left: 56px;
             overflow: hidden;
         }
     }
 
     .camera {
         display: none;
-        width: 138px;
-        line-height: 138px;
+        width: 180px;
+        line-height: 180px;
         text-align: center;
         color: #fff;
         font-size: 1.4rem;
